crates/polychem/src/parsers/snapshots/polychem__parsers__chemical_composition__tests__chemical_composition-10.snap
---
source: crates/polychem/src/parsers/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Chlorine-37",
            5,
        ),
    ],
    Some(
        (
            Remove,
            2,
            "Proton",
        ),
    ),
)
