crates/polychem/src/parsers/snapshots/polychem__parsers__chemical_composition__tests__chemical_composition-15.snap
---
source: crates/polychem/src/parsers/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Carbon",
            11,
        ),
        (
            "Hydrogen",
            12,
        ),
        (
            "Nitrogen",
            2,
        ),
        (
            "Oxygen",
            2,
        ),
    ],
    None,
)
