crates/polychem/src/parsers/snapshots/polychem__parsers__chemical_composition__tests__chemical_composition-3.snap
---
source: crates/polychem/src/parsers/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Oxygen",
            1,
        ),
        (
            "Hydrogen",
            1,
        ),
    ],
    Some(
        (
            Add,
            1,
            "Electron",
        ),
    ),
)
