crates/polychem/src/parsers/snapshots/polychem__parsers__chemical_composition__tests__chemical_composition-4.snap
---
source: crates/polychem/src/parsers/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Sodium",
            1,
        ),
    ],
    Some(
        (
            Remove,
            1,
            "Electron",
        ),
    ),
)
