crates/polychem/src/parsers/snapshots/polychem__parsers__chemical_composition__tests__chemical_composition-5.snap
---
source: crates/polychem/src/parsers/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Nitrogen",
            1,
        ),
        (
            "Hydrogen",
            3,
        ),
    ],
    Some(
        (
            Add,
            1,
            "Proton",
        ),
    ),
)
