crates/polychem/src/parsers/snapshots/polychem__parsers__chemical_composition__tests__chemical_composition-6.snap
---
source: crates/polychem/src/parsers/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Chromium",
            2,
        ),
        (
            "Oxygen",
            7,
        ),
    ],
    Some(
        (
            Add,
            2,
            "Electron",
        ),
    ),
)
