crates/polychem/src/parsers/snapshots/polychem__parsers__chemical_composition__tests__chemical_composition.snap
---
source: crates/polychem/src/parsers/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Hydrogen",
            2,
        ),
        (
            "Oxygen",
            1,
        ),
    ],
    None,
)
